force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__AutoExecutePrePricingStep__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AutoExecutePrePricingStep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether pre-pricing step should be executed automatically before pricing. Only applicable when before pricing is enabled by the pricing extension callback.</description>
    <inlineHelpText>Indicates whether pre-pricing step should be executed automatically before pricing. Only applicable when before pricing is enabled by the pricing extension callback.</inlineHelpText>
    <label>Auto Execute Pre-Pricing Step</label>
    <type>Checkbox</type>
</CustomField>