force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__DeferValidationCheckInBundles__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DeferValidationCheckInBundles__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicator to defer validation check in the bundle configuration step</description>
    <inlineHelpText>Indicator to defer validation check in the bundle configuration step</inlineHelpText>
    <label>Defer Validation Check In Bundles</label>
    <type>Checkbox</type>
</CustomField>