force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__HideCopyAction__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideCopyAction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether copy action will be hidden in the cart view</description>
    <inlineHelpText>Indicates whether copy action will be hidden in the cart view</inlineHelpText>
    <label>Hide Copy Action</label>
    <type>Checkbox</type>
</CustomField>