force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__LargeCartSplitCriteriaFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LargeCartSplitCriteriaFields__c</fullName>
    <description>The criteria fields used to split a large cart</description>
    <inlineHelpText>The list of Line item fields to break summarized view of items added during a large cart process. Each field API name separated by a comma or a new line.</inlineHelpText>
    <label>Large Cart Split Criteria Fields</label>
    <type>TextArea</type>
</CustomField>