force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__SearchAttributeDefaultPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SearchAttributeDefaultPage__c</fullName>
    <description>Field on the line item when checked, skips Constraint check. Enables bypassing constraint and finalize quote even if there are constraint errors.</description>
    <inlineHelpText>A checkbox type field in line item object. This is used to skip a line item from constraint check.</inlineHelpText>
    <label>Skip Constraint Decision Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>