force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ShowAdminSidebar__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowAdminSidebar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the sidebar should be displayed for admin pages.</description>
    <inlineHelpText>Indicates whether the sidebar should be displayed for admin pages.</inlineHelpText>
    <label>Show Admin Sidebar</label>
    <type>Checkbox</type>
</CustomField>